# nvidia-hackathon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  designsystem.md  netlify.toml  package-lock.json  package.json  phase.md  prd.md  requirements.txt  vercel.json
.playwright-mcp/: page-2026-05-30T01-23-09-992Z.yml  page-2026-05-30T01-23-30-790Z.yml  page-2026-05-30T01-27-41-209Z.yml  page-2026-05-30T01-28-19-055Z.yml
agent/: convexClient.ts  index.ts  llm.ts  package-lock.json  package.json  tsconfig.json
app/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.mts  vitest.config.ts
convex/: mutations.ts  queries.ts  schema.ts  seed.ts
docs/: 00-foundations.md  01-data-pipeline.md  02-backend-and-agent.md  03-frontend-and-generative-ui.md  04-polish-and-submission.md  05-eda-plan.md  06-exploratory-data-analysis.md  07-ml-model-usage.md  DEMO.md  README.md  bug-fix-log.md  connecting-to-nemotron.md  phase-bug-report.md
ml/: eda.py  prediction_api.py  prepare_data.py  toronto_predict.py
models/: pothole_model.joblib  snow_model.joblib
pipeline/: pyproject.toml
pipeline/artifacts/: daily_aggregates.parquet  forecasts.json  hotspots.json  pipeline_run.json  request_summaries.json  risk_scores.json  wards.geojson  wards.json
pipeline/src/: categories.py  engine.py  ingest_311.py  ingest_weather.py  mock.py  run.py  validate.py
pipeline/tests/: conftest.py  test_categories.py  test_engine.py  test_geospatial.py  test_ingest_311.py  test_rapids_branch.py  test_weather.py
scripts/: convert-parquet.py  (+1 more)
(+102 files in other folders)
